[JC] main | Take Unique Numbers

--- a/2025_11_05.ipynb
+++ b/2025_11_05.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'b': 1, 'a': 3, 'n': 2, 'm': 1, 'u': 1, 'f': 2}"
+       "{'b': 1, 'a': 3, 'n': 2}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,6 +31,37 @@
     "    return char_freqs\n",
     "\n",
     "char_frequency(word)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1, 2, 4]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers: list[int] = [3, 1, 2, 3, 2, 4]\n",
+    "\n",
+    "def unique_numbers(numbers: list[int]) -> list[int]:\n",
+    "    seen_nums: list[int] = []\n",
+    "\n",
+    "    for num in numbers:\n",
+    "        if num not in seen_nums:\n",
+    "            seen_nums.append(num)\n",
+    "\n",
+    "    return seen_nums\n",
+    "\n",
+    "unique_numbers(numbers)"
    ]
   }
  ],
