[JC] main | Take Longest Word

--- a/2025_11_05.ipynb
+++ b/2025_11_05.ipynb
@@ -63,6 +63,43 @@
     "\n",
     "unique_numbers(numbers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('quick', 5)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence: str = \"The quick brown fox jumps over the lazy dog\"\n",
+    "\n",
+    "def longest_word(sentence: str) -> tuple[str, int]:\n",
+    "    sentence.replace(\".\", \"\").replace(\",\", \"\").replace(\"!\", \"\").replace(\"?\", \"\")\n",
+    "\n",
+    "    words = sentence.split()\n",
+    "\n",
+    "    longest = \"\"\n",
+    "    max_len = 0\n",
+    "\n",
+    "    for word in words:\n",
+    "        if len(word) > max_len:\n",
+    "            longest = word\n",
+    "            max_len = len(word)\n",
+    "\n",
+    "    return (longest, max_len)\n",
+    " \n",
+    "longest_word(sentence)"
+   ]
   }
  ],
  "metadata": {
